--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 </head>
 <body ng-app="app">
 	<div ng-controller ="AppCtrl as AppCtrl">
-
 		<form ng-submit="AppCtrl.submit()">
    			<input type="text" placeholder="What needs to be done?" ng-model = "AppCtrl.todo.text"></input>
    			<button>Go!</button>
@@ -16,17 +15,19 @@
 
 		<button ng-if="AppCtrl.todos.length"; ng-click="AppCtrl.changeTodos()">{{AppCtrl.todosChecked() ? 'uncheck all' : 'check all'}}</button>
 
+		<div class = "tablewrapper">
 		<table>
-			<tr ng-repeat="otodo in AppCtrl.todos | filter:AppCtrl.filterState">
+			<tr ng-repeat="otodo in AppCtrl.todos | filter:AppCtrl.filterState | orderBy:'-$$hashKey'">
 				<td ng-class="{checked:otodo.completed, unchecked:!otodo.completed}">{{otodo.text}}</td>
 				<td>
 					<!--<button ng-click="otodo.completed = true">Check</button>
 					<button ng-click="otodo.completed = false">Uncheck</button>-->
-					<button ng-click="otodo.completed = !otodo.completed">{{otodo.completed ? 'uncheck' : 'check'}}</button>
+					<button ng-click="otodo.completed = !otodo.completed; AppCtrl.persist('todos', AppCtrl.todos)">{{otodo.completed ? 'uncheck' : 'check'}}</button>
 					<button ng-click="AppCtrl.remove(otodo)">x</button>
 				</td>
 			</tr>
 		</table>
+		</div>
 		
 		<label ng-if="AppCtrl.todos.length"><input type="radio" name="sex" value="All" ng-click="AppCtrl.filterState = {}" >All</input></label>
 		<label ng-if="AppCtrl.todos.length"><input type="radio" name="sex" value="Active" ng-if="AppCtrl.todos.length" ng-click="AppCtrl.filterState = {completed:false}">Active</input></label>
